tests/errors/cannot_take_address_of_primitive.n
Person :: struct { name str }

fn process(int *p) {
    print(p);
}

fn main() {
    int x = 5;
    process(&x);
}
